syntax = "proto3";
option go_package="./proto";

package user;

service UserService {
    rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
    rpc GetUsersByIds (GetUsersByIdsRequest) returns (GetUsersByIdsResponse);
    rpc SearchUsers (SearchUsersRequest) returns (SearchUsersResponse);
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
}

message User {
    int32 id = 1;
    string fname = 2;
    string city = 3;
    int64 phone = 4;
    float height = 5;
    bool married = 6;
}

message GetUserByIdRequest {
    int32 id = 1;
}

message GetUserByIdResponse {
    User user = 1;
}

message GetUsersByIdsRequest {
    repeated int32 ids = 1;
}

message GetUsersByIdsResponse {
    repeated User users = 1;
}

message SearchUsersRequest {
    string city = 1;
    int64 phone = 2;
    bool married = 3;
}

message SearchUsersResponse {
    repeated User users = 1;
}

message CreateUserRequest {
    string fname = 1;
    string city = 2;
    int64 phone = 3;
    float height = 4;
    bool married = 5;
}

message CreateUserResponse {
    User user = 1;
}